--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1472,7 +1472,8 @@
 				}
 
 				ul.contact li:hover a.fa-instagram {
-					background-color: #2E5E86;
+					/* background-color: #2E5E86; */
+					background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
 				}
 
 				ul.contact li:hover a.fa-google-plus {
@@ -1480,7 +1481,7 @@
 				}
 
 				ul.contact li:hover a.fa-github {
-					background-color: #495057;
+					background-color: #24292E;
 				}
 
 			ul.contact li:active {
