--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("font-awesome.min.css");
+@import url("all.min.css"); /* fontawesome stylesheet */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic|Open+Sans+Condensed:700");
 
 /*
@@ -1481,6 +1481,14 @@
 
 				ul.contact li:hover a.fa-linkedin {
 					background-color: #0A66C2;
+				}
+
+				ul.contact li:hover a.fa-google-scholar {
+					background-color: #4285f4;
+				}
+
+				ul.contact li:hover a.fa-bluesky {
+					background-color: #1185fe;
 				}
 
 				ul.contact li:hover a.fa-instagram {
